# perennia-crud

./: README.md  pyproject.toml
perennia_crud/: __init__.py  config.py  crud.py  exceptions.py  query.py  schema.py
perennia_crud/engine/: query_builder.py
tests/: test_query.py  test_query_builder.py  test_schema.py
