[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perennia-crud"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "PyMySQL>=1.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["perennia_crud*"]
